--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,10 @@
 language: python
 python:
-  - "3.3"
+  - "3.4"
+env:
+  - PYTHONHASHSEED=0
 install:
   - pip install .
   - pip install nose
   - pip install Sphinx
-  - export PYTHONHASHSEED=0
 script: "make tests"
