--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,13 @@
 language: python
+arch:
+  - amd64
+  - ppc64le
 python:
   - "3.7"
 env:
   - PYTHONHASHSEED=0
+before_install:
+  - sudo chown -Rvf $USER:$GROUP ~/.cache/pip/wheels
 install:
   - pip install .
   - pip install nose
