--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -2,9 +2,9 @@ name: run-test
 
 on:
   push:
-    branches: [master]
+    branches: [master, CI]
   pull_request:
-    branches: [master]
+    branches: [master, CI]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
