Revert "enable CI on this branch"
This reverts commit 6c2247d9e86f87ccc5c2945b98312b0dcbd003e7.

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -2,9 +2,9 @@ name: run-test
 
 on:
   push:
-    branches: [master, CI]
+    branches: [master]
   pull_request:
-    branches: [master, CI]
+    branches: [master]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
